# pyro

./: Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  build.rs
.github/workflows/: release.yml
.tmp/config/: config.toml
docs/: RELEASING.md  USER_GUIDE.md
installer/: pyro.wxs
scripts/: build-installer.ps1  mock-release.ps1
settings/Pyro.Settings/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Pyro.Settings.csproj  README.md  app.manifest
settings/Pyro.Settings/Models/: PyroConfig.cs
src/: app.rs  config.rs  hotkey.rs  logging.rs  main.rs  output.rs  pinned_capture.rs  platform_windows.rs  region_editor.rs  region_overlay.rs  settings_ui.rs  tray.rs
src/capture/: mod.rs  windows_capture.rs
