[package]
name = "pyro"
version = "0.1.0"
edition = "2024"
default-run = "pyro"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15.1", default-features = false, features = [
  "std",
  "compat-1-2",
  "backend-winit",
  "renderer-femtovg",
] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_WindowsAndMessaging",
] }
